test/functions/diten/whereClauseIgnored.good
whereClauseIgnored.chpl:8: error: unresolved call 'f(3)'
whereClauseIgnored.chpl:1: note: this candidate did not match: f(x: int)
whereClauseIgnored.chpl:1: note: because where clause evaluated to false
